# zotero-word-citation-automation

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: architecture.md  manifest-schema.md  windows-setup.md  zotero-word-plugin-checklist.md
docs/releases/: v0.1.0.md  v0.1.1.md  v0.1.2.md  v0.1.3.md  v0.1.4.md
examples/: minimal_manifest.json  sample_prose.txt  sample_references.txt
integrations/codex-skill/: SKILL.md  install_skill_to_codex.ps1
integrations/codex-skill/scripts/: build_manifest_from_natural_text.py  install_skill_to_codex.ps1  run_zotero_wordflow.py
scripts/: install_windows.ps1  smoke_test.ps1
src/zotero_wordflow/: __init__.py  cli.py  docx_fields.py  doi_verify.py  manifest.py  models.py  prose_manifest.py  windows_paths.py  zotero_import.py
tests/: test_cli.py  test_docx_fields.py  test_manifest.py  test_prose_manifest.py
